(rule
 (targets filled)
 (deps (:unikernel _tags config.ml unikernel.ml))
 (locks mirage-lock)
 (action (progn
          (run mirage configure -t unix)
	  (run mirage build))))

(rule
 (targets filled.hvt)
 (deps (:unikernel _tags config.ml unikernel.ml))
 (locks mirage-lock)
 (action (progn
          (run mirage configure -t hvt)
	  (run mirage build))))

(rule
 (targets filled.exe)
 (deps (:provision provision) (:filled filled))
 (locks mirage-lock)
 (action (run %{exe:../bin/caravan.exe} -i %{filled} -p %{provision} %{targets})))

(rule
 (targets filled.c.hvt)
 (deps (:provision provision) (:filled filled.hvt))
 (locks mirage-lock)
 (action (run %{exe:../bin/caravan.exe} -i %{filled} -p %{provision} %{targets})))

(rule (with-stdout-to result.hvt.output (run solo5-hvt %{exe:filled.c.hvt})))

(rule (with-stdout-to result.unix.output (run %{exe:filled.exe})))

(alias
 (name runtest)
 (package caravan)
 (locks mirage-lock)
 (deps (:output result.unix.output) (:expected result.unix.expected))
 (action (run diff -uw %{output} %{expected})))

(alias
 (name runtest)
 (package caravan)
 (locks mirage-lock)
 (deps (:output result.hvt.output) (:expected result.hvt.expected))
 (action (run diff -uw %{output} %{expected})))
