(library
 (name provision_freestanding)
 (public_name provision.freestanding)
 (optional)
 (libraries bigstringaf fmt)
 (c_names load)
 (c_flags (:include cflags.sexp)))

(rule (copy# ../load.c load.c))
(rule (copy# ../provision.ml provision.ml))

(rule (with-stdout-to cflags.sexp (run ./cflags.sh)))
